# seedcore

./: .dockerignore  .env  .gitattributes  .gitignore  AGENTS.md  ENHANCEMENT_SUMMARY.md  GEMINI.md  LICENSE  README.md  api_entrypoint_simple.sh  build-api.sh  build.sh  cleanup_organs.py  commit-message-agent-distribution-analysis.txt  commit-message-file-organization.txt  commit-msg-api-debug.txt  commit-msg-short.txt  commit-msg.txt  comprehensive_job_analysis.py  connection_pooling_validation_report.json  create_seedcore_skeleton.py  dc.sh  env.example  export.sh  gemini-extension.json  git-commit-message.txt  holon_ids.jsonl  kind-config.yaml  monitor_actors.py  op-manual.md  pyproject.toml  ray-build.sh  ray_cluster_diagnostic_report.md  ray_monitor_live.py  ray_upgrade_assessment.md  requirements-eventizer.txt  requirements-minimal.txt  requirements.txt  serve-build.sh  serve-delete.sh  (+9 more)
.codex/: INSTALL.md
bootstraps/: bootstrap_dispatchers.py  bootstrap_entry.py  bootstrap_organism.py
config/: coordinator.yaml  coordinator_config.yaml  eventizer-fast-patterns.json  eventizer_patterns.json  eventizer_patterns_schema.json  fast_eventizer_patterns.json  grafana-dashboard.json  organism.yaml  organs.yaml  predicates-bootstrap.yaml  predicates.yaml  prometheus-recording-rules.yaml  ray-serve.yaml  serve_config.yaml  specializations.yaml
deploy/: CONFIGURATION-SUMMARY.md  KIND_CLUSTER_REFERENCE.md  Makefile  PKG_DEPLOYMENT_GUIDE.md  allow-api-to-ray-serve.yaml  apply-new-ray-config.sh  bak-setup-kind-ray.sh  bootstrap-kind.sh  bootstrap-local.sh  bootstrap.sh  bootstrap_dispatchers.sh  bootstrap_organism.sh  cleanup-datastores.sh  debug-cluster.sh  deploy-all.sh  deploy-api.sh  deploy-cognitive.sh  deploy-datadog.sh  deploy-datastores-local.sh  deploy-datastores.sh  deploy-dispatchers.sh  deploy-hal.sh  deploy-ingress.sh  deploy-k8s-ingress.sh  deploy-ray-head.sh  deploy-ray-service.sh  deploy-seedcore-api.sh  deploy-seedcore.sh  deploy-serve-k8s.sh  deploy-serve.sh  deploy-verification-api.sh  docker-compose.serve.yml  execapi.sh  fix_current_db.sh  generate-kind-config.sh  init-basic-db-local.sh  init-basic-db.sh  init-databases-local.sh  init-databases-mini.sh  init-databases.sh  (+41 more)
docker/: .dockerignore  .env.backup  CHANGES-SEPARATION.md  DEBUG_WORKFLOW.md  Dockerfile  Dockerfile.alpine  Dockerfile.api  Dockerfile.app  Dockerfile.cognitive-serve  Dockerfile.hal  Dockerfile.optimize  Dockerfile.ray  Dockerfile.ray.lightweight  Dockerfile.ray.optimized  Dockerfile.serve  Dockerfile.verification-api  OPTIMIZATION_GUIDE.md  PYTHON_310_MIGRATION_SUMMARY.md  RAY_DASHBOARD_FIXES.md  RAY_LOGGING_GUIDE.md  RAY_SERVE_PATTERN.md  RAY_SERVE_STATUS.md  README-standalone-app.md  README.md  analyze-image.sh  api_entrypoint.sh  api_entrypoint_wrapper.sh  app_entrypoint.py  cognitive_serve_entrypoint.py  dashboard-proxy.conf  debug-helper.sh  docker-compose.app.standalone.yml  docker-compose.app.yml  docker-compose.serve.standalone.yml  docker-compose.serve.yml  docker-compose.yml  dsp_patch.py  env.example  fact_uuids.json  logging_config.py  (+35 more)
docs/: API_DEBUG_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE_MIGRATION_SUMMARY.md  CENTRALIZED_RAY_ARCHITECTURE_SUMMARY.md  CHANGES-SEPARATION.md  CHANGES_SUMMARY.md  COA_IMPLEMENTATION_GUIDE.md  CONFIGURATION-SUMMARY.md  CONSOLIDATION_SUMMARY.md  COORDINATOR_ASYNC_INIT_FIX.md  COORDINATOR_MIGRATION_SUMMARY.md  DATABASE_TASKS.md  DEBUG_HELPER.md  DGL_INTEGRATION.md  DISPATCHER_TROUBLESHOOTING.md  DOCKER_CONTAINER_NAMING_CONSISTENCY.md  DOCKER_DOCUMENTATION_REORGANIZATION.md  DOCKER_IMAGE_NAMING_CONSISTENCY.md  DOCUMENTATION_REORGANIZATION_RAY_2.20.0.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DSPY_IMPROVEMENTS_SUMMARY.md  INDEX.md  (+70 more)
rust/: Cargo.toml  README.md
rust/crates/seedcore-approval-core/: Cargo.toml
rust/crates/seedcore-approval-core/src/: lib.rs
rust/crates/seedcore-kernel-testkit/: Cargo.toml
rust/crates/seedcore-kernel-testkit/src/: lib.rs
rust/crates/seedcore-kernel-types/: Cargo.toml
rust/crates/seedcore-kernel-types/src/: lib.rs
rust/crates/seedcore-policy-core/: Cargo.toml
rust/crates/seedcore-policy-core/src/: lib.rs
rust/crates/seedcore-proof-core/: Cargo.toml
rust/crates/seedcore-proof-core/src/: lib.rs
rust/crates/seedcore-proof-py/: Cargo.toml
rust/crates/seedcore-proof-py/src/: lib.rs
rust/crates/seedcore-token-core/: Cargo.toml
rust/crates/seedcore-token-core/src/: lib.rs
rust/crates/seedcore-verify/: Cargo.toml
rust/crates/seedcore-verify/src/: main.rs
rust/fixtures/: README.md
rust/fixtures/approval_envelopes/: transition_history_allow.json
rust/fixtures/receipts/: policy_receipt_artifact.json  restricted_transition_receipt_artifact.json  restricted_transition_receipt_strict_tpm_artifact.json  restricted_transition_trust_bundle.json  restricted_transition_trust_bundle_strict_tpm.json
rust/fixtures/replay_bundles/: allow_chain.json  allow_chain_with_approval_transition.json
rust/fixtures/tokens/: allow_request.json  mint_claims.json
rust/fixtures/transfers/allow_case/: README.md  expected.execution_token.json  expected.policy_evaluation.json  expected.verification_report.json  input.action_intent.json  input.approval_envelope.json  input.asset_state.json  input.telemetry_summary.json
rust/fixtures/transfers/deny_missing_approval/: README.md  expected.policy_evaluation.json  expected.verification_report.json  input.action_intent.json  input.approval_envelope.json  input.asset_state.json  input.authority_graph_summary.json  input.telemetry_summary.json
rust/fixtures/transfers/escalate_break_glass/: README.md  expected.policy_evaluation.json  expected.verification_report.json  input.action_intent.json  input.approval_envelope.json  input.asset_state.json  input.break_glass.json  input.telemetry_summary.json
rust/fixtures/transfers/quarantine_stale_telemetry/: README.md  expected.policy_evaluation.json  expected.verification_report.json  input.action_intent.json  input.approval_envelope.json  input.asset_state.json  input.authority_graph_summary.json  input.telemetry_summary.json
(+1821 files in other folders)
