[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedcore"
version = "0.1.0"
description = "Minimal Viable Cognitive Core (SeedCore) - unified energy substrate for COA organisms."
authors = [{name = "Neil Li", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ray>=2.10",
    "dgl>=2.1",
    "numpy",
    "pydantic>=2",
    "fastapi",
    "uvicorn",
    "grpcio",
    "protobuf",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy", "ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]
