[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedcore"
version = "1.0.0"
description = "Dynamic Cognitive Architecture - Energy-governed, organ-aware, hierarchical-memory substrate for agent swarms."
authors = [{name = "SeedCore Contributors", email = "contributors@seedcore.ai"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["cognitive-architecture", "multi-agent-system", "energy-based-ai", "adaptive-learning"]
dependencies = [
    # Core API
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic-settings==2.1.0",
    "pydantic==2.5.0",
    
    # DB / drivers
    "asyncpg==0.29.0",
    "psycopg[binary]==3.1.18",
    "psycopg2-binary==2.9.9",
    "pgvector==0.2.4",
    "neo4j-driver==5.15.0",
    "sqlalchemy[asyncio]==2.0.23",
    "mysql-connector-python==8.2.0",
    "pymysql>=1.1",
    "aiomysql==0.2.0",
    "cryptography>=41.0.0",
    
    # HTTP / networking
    "aiohttp==3.9.1",
    "httpx==0.25.2",
    "grpcio==1.63.0",
    "protobuf==4.21.12",
    
    # Utilities
    "pyyaml==6.0.1",
    "tqdm==4.66.1",
    "prometheus-client==0.19.0",
    "redis==5.0.1",
    
    # Core ML / DL side deps
    "ray==2.33.0",
    "dgl>=2.1",
    "numpy",
    "torchdata==0.7.1",
    
    # Data / Tables
    "pandas==2.2.2",
    "pyarrow==15.0.2",
    "datasets==2.14.7",
    "fsspec[http]==2023.10.0",
    
    # Seedcore / AI deps
    "dspy-ai==2.4.4",
    
    # ML dependencies for salience scoring
    "scikit-learn==1.3.0",
    
    # XGBoost integration
    "xgboost>=2.0.0",
    "xgboost-ray>=0.1.19",
    
    # Ray integration
    "aiorwlock==1.3.0",
    "aioredis==2.0.1",
    
    # LLM client
    "openai>=1.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23.7", "black", "ruff", "mypy", "ipykernel"]

[project.urls]
Homepage = "https://github.com/NeilLi/seedcore"
Repository = "https://github.com/NeilLi/seedcore"
Documentation = "https://github.com/NeilLi/seedcore#readme"
"Bug Tracker" = "https://github.com/NeilLi/seedcore/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
