[workspace]
members = [
  "crates/seedcore-kernel-types",
  "crates/seedcore-proof-core",
  "crates/seedcore-proof-py",
  "crates/seedcore-approval-core",
  "crates/seedcore-policy-core",
  "crates/seedcore-token-core",
  "crates/seedcore-verify",
  "crates/seedcore-kernel-testkit",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["SeedCore Contributors <contributors@seedcore.ai>"]
repository = "https://github.com/NeilLi/seedcore"

[workspace.dependencies]
base64 = "0.22"
base64ct = "=1.6.0"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", default-features = false, features = ["pkcs8", "std"] }
hex = "0.4"
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
