[package]
name = "seedcore-kernel-testkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
seedcore-kernel-types = { path = "../seedcore-kernel-types" }
seedcore-proof-core = { path = "../seedcore-proof-core" }
seedcore-approval-core = { path = "../seedcore-approval-core" }
seedcore-policy-core = { path = "../seedcore-policy-core" }
seedcore-token-core = { path = "../seedcore-token-core" }
serde.workspace = true
serde_json.workspace = true
