[package]
name = "seedcore-proof-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
seedcore-kernel-types = { path = "../seedcore-kernel-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
