[package]
name = "seedcore-token-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
seedcore-kernel-types = { path = "../seedcore-kernel-types" }
seedcore-proof-core = { path = "../seedcore-proof-core" }
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
